--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
