--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "firebase": "^11.1.0",
     "gsap": "^3.12.5",
     "motion": "^11.13.5",
     "react": "^18.3.1",
