--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-top-loading-bar": "^2.3.1"
   },
