--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "bcryptjs": "^2.4.3",
     "firebase": "^11.1.0",
     "gsap": "^3.12.5",
     "motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.10",
     "react-router-dom": "^7.0.1",
     "react-top-loading-bar": "^2.3.1"
   },
