--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.10",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
