--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "fusionpixel",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite",                 
+    "build": "vite build",             
+    "serve": "vite preview", 
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
